1.0.1
 - Paths aren't correctly normalized in Phalcon\Mvc\Model\MetaData\Files
 - Added extra class prefix to schema.table in Phalcon\Mvc\Model\MetaData to avoid multiple-database collisions
 - Now Phalcon\Mvc\Router ignores numeric paths in controller, namespace, module and action, avoiding that those will be passed to the dispatcher

1.0.0b2
 - Added Phalcon\Mvc\Router::setUriSource to set if the URI source must be $_GET['_url'] or $_SERVER['REQUEST_URI']
 - Added a white-list parameter to Phalcon\Mvc\Model::save(), Phalcon\Mvc\Model::create() and
 Phalcon\Mvc\Model::update() to avoid possible mass-assigment attacks
 - Added leftJoin/rightJoin to QueryBuilder

1.0.0b1
 - Fixed bug with missing blocks in multiple inheritance in Volt
 - Support for ternary operator in Volt
 - Support for 'forelse' in Volt
 - Added support for loop variable context in Volt
 - Added whitespace control delimiters {%- -%} and {{- -}} to Volt
 - Suport for 'in' and 'not in' operators in Volt
 - Added Phalcon\Mvc\Model::assign to assign an array of values to a model instance
 - Added Phalcon\Mvc\Model::refresh to refresh the state of a model
 - Added Phalcon\Logger\Adapter::setLogLevel to filter messages with greater or less priority
 - Removed constructor from Phalcon\Cache\BackendInterface
 - Added Phalcon\Cache\Multiple, this backend writes to several backends, and reads data according to the order in which backends were registered.
 - Now a model can use a separate connection to read and another to write, this makes horizontal sharding easy
 - Now, a model could implement a method selectReadConnection to dynamically return the correct database according to the current query conditions
 - Added Phalcon\Cache\Backend\Memory to cache data in the current request
 - Added Phalcon\Validation, this component allows the validate a set of data based on pre-defined rules